fix misaligned headers and scrolling sticking

--- a/dispatch/static/css/style.css
+++ b/dispatch/static/css/style.css
@@ -33,12 +33,11 @@ body {
     align-items: center;
     border-right: thin var(--border-colour) solid;
     min-width: 25ch;
-    padding: 5px;
 }
 
 .header_button {
     text-decoration: none;
-    height: 80%;
+    height: 100%;
     border: solid;
     background-color: rgba(255, 0, 0, 0);
     border-color: #00000000;
@@ -140,7 +139,7 @@ input.feed_button {
     min-width: 25ch;
 }
 
-.feed_list_container {
+.feed_list_container, .feed_list_header {
     min-width: 25ch;
     border-right: thin var(--border-colour) solid;
 }
@@ -215,7 +214,7 @@ input.entry_button {
     display: none;
 }
 
-.feed_entries_container {
+.feed_entries_container, .feed_entries_header {
     min-width: 25ch;
     border-right: thin var(--border-colour) solid;
 }
@@ -410,7 +409,7 @@ a {
     }
 
     .entry_content {
-        font-size: clamp(22px, 1.5vw, 24px);
+        font-size: clamp(26px, 1.5vw, 30px);
         padding-top: 20px;
         max-width: 90%;
         line-height: 28px;
@@ -446,4 +445,34 @@ a {
     grid-template-columns: 1fr auto;
     align-items: center;
     font-size: 14px;
+}
+
+a span {
+  display:inline-block;
+  animation: wiggle 1s infinite;
+  animation-delay: calc(var(--animation-order) * 307ms);
+  transform-origin: center;
+  animation-timing-function: ease-in-out;
+}
+
+
+@keyframes wiggle {
+  0% {
+    transform: scale(1.0) translateY(0px) rotate(0deg);
+  }
+  20%{
+    transform: scale(1.0) translateY(-2px) rotate(-3deg);
+  }
+  40%{
+    transform: scale(1.1) translateY(-2px) rotate(3deg);
+  }
+  60%{
+    transform: scale(1.0) translateY(2px) rotate(-3deg);
+  }
+  80%{
+    transform: scale(0.95) translateY(-2px) rotate(3deg);
+  }
+  100% {
+    transform: scale(1.0) translateY(0px) rotate(0deg);
+  }
 }
